# lab1-processlist-j-vaira

./: CMakeLists.txt  README.md
lab-1/: lab-1.sln
lab-1/Debug/: lab-1.ilk
lab-1/lab-1/: ReadMe.txt  file1.txt  file2.txt  lab-1.cpp  lab-1.vcxproj  lab-1.vcxproj.filters  stdafx.cpp
lab-1/lab-1/Debug/: file1.txt  file2.txt  lab-1.pch  vc141.idb
lab-1/lab-1/Debug/lab-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab-1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
